; ModuleID = '/home/carl/AnghaBench/libevent/extr_http.c_evhttp_is_connection_keepalive.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_http.c_evhttp_is_connection_keepalive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evkeyvalq = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"Connection\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"keep-alive\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.evkeyvalq*)* @evhttp_is_connection_keepalive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @evhttp_is_connection_keepalive(%struct.evkeyvalq* %0) #0 {
  %2 = alloca %struct.evkeyvalq*, align 8
  %3 = alloca i8*, align 8
  store %struct.evkeyvalq* %0, %struct.evkeyvalq** %2, align 8
  %4 = load %struct.evkeyvalq*, %struct.evkeyvalq** %2, align 8
  %5 = call i8* @evhttp_find_header(%struct.evkeyvalq* %4, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @evutil_ascii_strncasecmp(i8* %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 10)
  %11 = icmp eq i64 %10, 0
  br label %12

12:                                               ; preds = %8, %1
  %13 = phi i1 [ false, %1 ], [ %11, %8 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i8* @evhttp_find_header(%struct.evkeyvalq*, i8*) #1

declare dso_local i64 @evutil_ascii_strncasecmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
